# genelmudur-bot

./: .gitignore  README.md  mypy.ini.sample  pyproject.toml  requirements.txt  requirements_dev.txt  sql.ini.sample
.github/workflows/: main.yml
genelmudur/: BotConfig.py  __init__.py  __main__.py  genelmudur.ini.sample
genelmudur/models/: chats.py  dbcontext.py  federations.py  membership.py  users.py
genelmudur/models/helpers/: base.py
genelmudur/plugins/: ban.py  ping_test.py  say_hello.py  welcome.py
genelmudur/plugins/helpers/: admin_check.py  extract_user.py  extract_users.py
genelmudur/utils/: buttonator.py  prefix.py  target.py
