[tool.poetry]
name = "genelmudur-bot"
version = "0.1.0"
description = ""
authors = ["Astrapel Lygdamus <astrapel@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
Pyrogram = "^1.1.8"
tgcrypto = "^1.2.2"
SQLAlchemy = "^1.3.22"
python-decouple = "^3.3"
pydantic = "^1.7.3"
apscheduler = "^3.6.3"
psycopg2 = "^2.8.6"


[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
debugpy = "^1.2.1"
rope = "^0.18.0"
wheel = "^0.36.2"
setuptools = "^51.1.1"
coverage = "^5.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
